<resources>
    <string name="app_name">ToolBag</string>
    <string name="alarm">Warning</string>
    <string name="compass">Compass</string>
    <string name="gradienter">Gradienter</string>
    <string name="handingpaint">Pic Hanging</string>
    <string name="height_measure">HeightMeasure</string>
    <string name="magnifier">Magnifier</string>
    <string name="mirror">Mirror</string>
    <string name="noise">SoundMeter</string>
    <string name="plumb">Plumb Bob</string>
    <string name="protractor">Protractor</string>
    <string name="torch">Flashlight</string>
    <string name="step">Pedometer</string>
    <string name="today_target">Target Today</string>
    <string name="history_step">History Steps</string>
    <string name="set_plan">Set Target</string>
    <string name="services_tip">Welcome to the ToolBag application!</string>
    <string name="flashlight">Flash Light</string>
    <string name="alarming">Alarm Bell</string>
    <string name="screen_flash">Alarm Lamp</string>
    <string name="volume_size_name1">Quiet environment(0db-45db)</string>
    <string name="volume_size_name2">Common indoor environment(45db-60db)</string>
    <string name="volume_size_name3">Noisy workplace(60db-80db)</string>
    <string name="volume_size_name4">Harmful noise(80db-115db)</string>
    <string name="volume_size_name5">Extremely harmful noise(115db-140db)</string>
    <string name="test_fail">Noise test initialization failed</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="east_north">Northeast</string>
    <string name="east_south">Southeast</string>
    <string name="west_south">Southwest</string>
    <string name="west_north">Northwest</string>
    <string name="please_calibration">Please shake the device to calibrate the compass</string>
    <string name="calibration_success">Calibration Successful</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="first_step_tips">Step 1: Enter your height(cm)</string>
    <string name="second_step_tips">Step 2: Ensure that the bottom of the object being tested is on the same horizontal plane as you, then stand straight and align your eyes, equipment, and the bottom of the object being tested in a straight line. After alignment, click on any position on the screen. If the operation is successful, the device will vibrate briefly. Otherwise, it will vibrate briefly twice.</string>
    <string name="last_step_tips">Step 3: After the person stands straight, form a straight line between their eyes, equipment, and the top of the object being measured. After alignment, click on any position on the screen again. If the operation is successful, the device will vibrate briefly. Otherwise, it will vibrate briefly twice.</string>
    <string name="input_height_tips">Please enter your height (cm)</string>
    <string name="target_height">Target Height</string>
    <string name="your_height">Your Height</string>
    <string name="high_point_angle">Elevation Angle</string>
    <string name="low_point_angel">Prone Angle</string>
    <string name="target_distance">Target Distance</string>
    <string name="start_measure">Start Measure</string>
    <string name="next_measure">NEXT</string>
    <string name="again_measure">REMEASURE</string>
    <string name="vertical1">Vertical：</string>
    <string name="horizontal1">Horizontal：</string>
    <string name="cannot_find_back">Rear camera not found</string>
    <string name="cannot_find_front">Front camera not found</string>
    <string name="not_support_flash">This camera does not support flash</string>
    <string name="fail_1">Please follow the method shown in the diagram to make the device perpendicular to the horizontal plane and try again!</string>
    <string name="fail_2">Please adjust the device direction according to the diagram, ensuring that the top of the device is close to the eye side!</string>
    <string name="fail_3">Please follow the method shown in the diagram to ensure that the eyes, equipment, and the top of the object being measured are on the same straight line!</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="input">Please enter the target number of steps</string>
    <string name="data_history">Date</string>
    <string name="count_history">Step Number</string>
    <string name="title_history">Historical Data(Last 30 Days)</string>
    <string name="battery_low">The battery level is below 15%, this function is temporarily unavailable!</string>
</resources>