<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flash_blue"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.toolbag.widget.SoundDiscView
            android:id="@+id/soundDiscView"
            android:layout_width="300dp"
            android:layout_height="328dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/noise_disc" />

        <TextView
            android:id="@+id/quiteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/volume_size_name1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/indoorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/volume_size_name2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noisyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/volume_size_name3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/harmfulTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/volume_size_name4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/extremelyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/volume_size_name5"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>