<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/height_measure_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/flash_blue"
    android:visibility="gone">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/table_v_divider"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:showDividers="end|middle|beginning">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="end|middle|beginning">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/target_height"
                android:textColor="@color/sound_value1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/target_height"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/sound_value1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="end|middle|beginning">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/your_height"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="end|middle|beginning">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_point_angle"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle_of_elevation"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="end|middle|beginning">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/low_point_angel"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle_of_depression"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="end|middle|beginning">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/target_distance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/target_distance"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>